src/objects/Child1__c.object
<CustomObject>
    <description>Branch changed</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent1</label>
        <referenceTo>Parent1__c</referenceTo>
        <relationshipLabel>Child1</relationshipLabel>
        <relationshipName>Child1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Child1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TestDeactivate</fullName>
        <active>true</active>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
</CustomObject>